...
    <string name="text4">4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="parent_fragment">Parent Fragment</string>
    <string name="fragment_receiver">Fragment Receiver</string>
    <string name="send">Send</string>
    <string name="empty">empty</string>
    <string name="child_fragment_text">Child Fragment</string>
    <string name="message_will_appear_here">Message will appear here</string>
    <string name="grandchild_fragment">Grandchild Fragment</string>
    <string name="parent_layout_title">Parent Layout</string>
    <string name="child_layout_title">Child Layout</string>
    <string name="grandchild_layout_title">Grandchild Layout</string>
    <string name="number">number</string>
    <string name="text5">5</string>

    <!-- List for Recycler View-->
    <array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Noname</item>
    </array>
</resources>

