...
            android:id="@+id/frame2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/toastView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#50ffffff"
            android:text="@string/empty" />
    </LinearLayout>

...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/text3" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/text4" />
...
