<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /******************************************************************************
  ~   Copyright (C) 2019 Alexander Uchitel.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  ******************************************************************************/
  -->

<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBottomPanel"
    tools:listitem="@android:layout/simple_selectable_list_item"
    tools:itemCount="9" />
